# chromic

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  copyright.txt  readme.txt
imgui/: CMakeLists.txt  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h  imgui_tables.cpp  imgui_widgets.cpp
res/: level.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  Constants.h  Game.cpp  Game.h  GameTime.cpp  GameTime.h  InputManager.cpp  InputManager.h  KeyAction.cpp  KeyAction.h  Vec2.h  World.cpp  World.h  main.cpp
src/Commands/: CMakeLists.txt  ICommand.h  Jump.cpp  Jump.h  Move.cpp  Move.h  Types.h
src/Components/: CMakeLists.txt  DynamicRigidBody.h  Ground.h  Jumper.h  KinematicRigidBody.h  Runner.h  Sprite.h  SpriteSheetAnimation.h  StaticRigidBody.h  Transform.h  Velocity.h
src/Systems/: AnimationUpdate.cpp  AnimationUpdate.h  BackgroundColorStartup.cpp  BackgroundColorStartup.h  CMakeLists.txt  CameraDebugDraw.cpp  CameraDebugDraw.h  CameraPositionUpdate.cpp  CameraPositionUpdate.h  CollisionUpdate.cpp  CollisionUpdate.h  GravityUpdate.cpp  GravityUpdate.h  GroundStartup.cpp  GroundStartup.h  IDrawSystem.h  IStartupSystem.h  IUpdateSystem.h  JumpingUpdate.cpp  JumpingUpdate.h  LevelStartup.cpp  LevelStartup.h  MovingUpdate.cpp  MovingUpdate.h  PlayerAnimationUpdate.cpp  PlayerAnimationUpdate.h  PlayerStartup.cpp  PlayerStartup.h  PositionUpdate.cpp  PositionUpdate.h  SpriteDraw.cpp  SpriteDraw.h  Types.h
